--- a/assets/css/museum-theme.css
+++ b/assets/css/museum-theme.css
@@ -51,11 +51,12 @@
 
 body {
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .header {
   padding-top: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
   color: #C02223;
   position: relative;
 }
@@ -86,6 +87,7 @@ body {
   margin: 0;
   margin-top: 40px;
   padding: 0;
+  padding-bottom: 10px;
   list-style: none;
   display: flex;
   align-items: center;
@@ -107,17 +109,19 @@ body {
 .logo-name {
   color: #C02223;
   font-family: 'Roboto', serif-serif;
-  font-size: 24px;
   margin-left: 10px;
 }
 
 .logo-name span {
   font-size: 12px;
+  padding-bottom: 5px;
 }
 
 .logo-name h3 {
   margin: 0;
   padding: 0;
+  padding-top: 5px;
+  font-size: 24px;
   line-height: 1;
 }
 
@@ -128,7 +132,7 @@ body {
 }
 
 .menu-item:not(:last-child) {
-  margin-right: 30px;
+  margin-right: 22px;
 }
 
 .menu-item:hover .sub-menu {
@@ -137,7 +141,7 @@ body {
 
 .menu-item a {
   text-decoration: none;
-  color: #C02223;
+  color: #323232;
 }
 
 .sub-menu {
