--- a/assets/sass/_header.sass
+++ b/assets/sass/_header.sass
@@ -1,8 +1,9 @@
 body
   overflow-x: hidden
+  overflow-y: scroll
 .header
   padding-top: 10px
-  padding-bottom: 10px
+  padding-bottom: 15px
   color: #C02223
   position: relative
   &::after
@@ -25,6 +26,7 @@ body
     margin: 0
     margin-top: 40px
     padding: 0
+    padding-bottom: 10px
     list-style: none
     display: flex
     align-items: center
@@ -39,13 +41,15 @@ body
   &-name
     color: #C02223
     font-family: 'Roboto', serif-serif
-    font-size: 24px
     margin-left: 10px
     span
       font-size: 12px
+      padding-bottom: 5px
     h3
       margin: 0
       padding: 0
+      padding-top: 5px
+      font-size: 24px
       line-height: 1
 .menu
   &-item
@@ -53,13 +57,13 @@ body
     font-size: 15px
     font-weight: 500
     &:not(:last-child)
-      margin-right: 30px
+      margin-right: 22px
     &:hover
       .sub-menu
         display: block
     a
       text-decoration: none
-      color: #C02223
+      color: #323232
 .sub-menu
   position: absolute
   background-color: #ffffff
