--- a/assets/sass/_header.sass
+++ b/assets/sass/_header.sass
@@ -1,6 +1,5 @@
 body
   overflow-x: hidden
-  overflow-y: scroll
 .header
   padding-top: 10px
   padding-bottom: 15px
@@ -44,6 +43,7 @@ body
     margin-left: 10px
     span
       font-size: 12px
+      letter-spacing: 0.03em
       padding-bottom: 5px
     h3
       margin: 0
