Секция Афиша + мелкие правки

--- a/assets/sass/_footer.sass
+++ b/assets/sass/_footer.sass
@@ -2,6 +2,8 @@
   padding: 50px 0 30px
   background-color: #C02223
   color: #ffffff
+  section
+    padding: initial
   &-wrapper
     display: flex
   &-nav
