--- a/assets/css/museum-theme.css
+++ b/assets/css/museum-theme.css
@@ -28,6 +28,10 @@
   margin: auto;
 }
 
+section {
+  padding: 10px 0 80px 0;
+}
+
 @media screen and (max-width: 1200px) {
   .go-top {
     right: 20px;
@@ -313,6 +317,10 @@ body {
   padding: 50px 0 30px;
   background-color: #C02223;
   color: #ffffff;
+}
+
+.footer section {
+  padding: initial;
 }
 
 .footer-wrapper {
@@ -602,4 +610,84 @@ body {
 .hero .swiper-button-next::after, .hero .swiper-button-prev::after {
   content: '';
   width: 42px;
+}
+
+.afisha {
+  padding-bottom: 50px;
+  border-bottom: 1px solid #C02223;
+}
+
+.afisha h1 {
+  margin: 0;
+  margin-bottom: 5px;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 36px;
+  color: #323232;
+}
+
+.afisha-tabs {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 15px;
+}
+
+.afisha-tabs div {
+  font-size: 14px;
+  color: #A2A2A2;
+  cursor: pointer;
+  margin-left: 23px;
+}
+
+.afisha-tabs div .active {
+  text-decoration-line: underline;
+  color: #C02223;
+}
+
+.afisha-posts {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  gap: 30px;
+}
+
+.afisha-posts-content {
+  font-weight: 500;
+}
+
+.afisha-posts-content a {
+  text-decoration: none;
+}
+
+.afisha-posts-thumb {
+  min-width: 380px;
+  object-fit: cover;
+}
+
+.afisha-posts-excerpt {
+  font-size: 16px;
+  color: #A2A2A2;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.afisha-posts-title {
+  font-size: 18px;
+  line-height: 130%;
+  color: #323232;
+  margin: 0;
+}
+
+.afisha-link {
+  margin: 0 auto;
+  margin-top: 50px;
+  text-decoration: none;
+  color: #C02223;
+  border: 1px solid #C02223;
+  width: 270px;
+  height: 60px;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
