--- a/assets/sass/_grid.sass
+++ b/assets/sass/_grid.sass
@@ -21,6 +21,9 @@
   padding-right: 15px
   margin: auto
 
+section
+  padding: 10px 0 80px 0
+
 @media screen and (max-width: 1200px)
   .go-top
     right: 20px
