Блок События + Мелкие правки

--- a/assets/sass/_footer.sass
+++ b/assets/sass/_footer.sass
@@ -37,6 +37,9 @@
       &-name
         color: #ffffff
   &-menu
+    &-title
+      color: #ffffff
+      line-height: unset
     ul
       padding: 0
       margin: 0
