--- a/assets/sass/_grid.sass
+++ b/assets/sass/_grid.sass
@@ -23,6 +23,27 @@
 
 section
   padding: 10px 0 80px 0
+  border-bottom: 1px solid #C02223
+  h2
+    font-weight: 500
+    font-size: 30px
+    line-height: 36px
+    color: #323232
+    margin: 0
+    margin-bottom: 40px
+
+.button-link
+  margin: 0 auto
+  margin-top: 50px
+  text-decoration: none
+  color: #C02223
+  border: 1px solid #C02223
+  width: 270px
+  height: 60px
+  text-transform: uppercase
+  display: flex
+  justify-content: center
+  align-items: center
 
 @media screen and (max-width: 1200px)
   .go-top
