--- a/assets/css/museum-theme.css
+++ b/assets/css/museum-theme.css
@@ -30,6 +30,30 @@
 
 section {
   padding: 10px 0 80px 0;
+  border-bottom: 1px solid #C02223;
+}
+
+section h2 {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 36px;
+  color: #323232;
+  margin: 0;
+  margin-bottom: 40px;
+}
+
+.button-link {
+  margin: 0 auto;
+  margin-top: 50px;
+  text-decoration: none;
+  color: #C02223;
+  border: 1px solid #C02223;
+  width: 270px;
+  height: 60px;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (max-width: 1200px) {
@@ -377,6 +401,11 @@ body {
   color: #ffffff;
 }
 
+.footer-menu-title {
+  color: #ffffff;
+  line-height: unset;
+}
+
 .footer-menu ul {
   padding: 0;
   margin: 0;
@@ -538,7 +567,14 @@ body {
 }
 
 .hero .article-post {
+  height: 600px;
   position: relative;
+}
+
+.hero .article-post img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .hero .article-permalink, .hero .article-btn {
@@ -611,7 +647,6 @@ body {
 
 .poster {
   padding-bottom: 50px;
-  border-bottom: 1px solid #C02223;
 }
 
 .poster h1 {
@@ -675,32 +710,9 @@ body {
   margin: 0;
 }
 
-.poster-link {
-  margin: 0 auto;
-  margin-top: 50px;
-  text-decoration: none;
-  color: #C02223;
-  border: 1px solid #C02223;
-  width: 270px;
-  height: 60px;
-  text-transform: uppercase;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .programs {
   padding-top: 50px;
   padding-bottom: 100px;
-  border-bottom: 1px solid #C02223;
-}
-
-.programs h2 {
-  font-weight: 500;
-  font-size: 30px;
-  line-height: 36px;
-  color: #323232;
-  margin-bottom: 40px;
 }
 
 .programs-slider {
@@ -716,7 +728,12 @@ body {
 }
 
 .programs-article-post {
+  height: 350px;
   display: flex;
+}
+
+.programs-article-post img {
+  object-fit: cover;
 }
 
 .programs-article-text {
@@ -742,20 +759,6 @@ body {
   color: #323232;
   margin: 0;
   margin-bottom: 30px;
-}
-
-.programs-link {
-  margin: 0 auto;
-  margin-top: 50px;
-  text-decoration: none;
-  color: #C02223;
-  border: 1px solid #C02223;
-  width: 270px;
-  height: 60px;
-  text-transform: uppercase;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .programs .swiper-slide-prev {
@@ -794,4 +797,68 @@ body {
 .programs .swiper-button-next::after, .programs .swiper-button-prev::after {
   content: '';
   width: 42px;
+}
+
+.news {
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
+
+.news-posts {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 25px;
+}
+
+.news-posts-content {
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.news-posts-content a {
+  text-decoration: none;
+}
+
+.news-posts .item-1 {
+  grid-area: 1 / 1 / 3 / 2;
+  width: 790px;
+}
+
+.news-posts .item-1 h4 {
+  font-size: 24px;
+}
+
+.news-posts .item-2 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+.news-posts .item-3 {
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+.news-posts .date {
+  display: block;
+  color: #A2A2A2;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.news-posts-title {
+  margin: 0;
+  font-size: 18px;
+  line-height: 130%;
+  color: #323232;
+}
+
+.news-posts-text {
+  font-family: 'Open Sans';
+  font-style: normal;
+  line-height: 130%;
+  color: #666666;
+}
+
+.news-posts-text p {
+  margin: 20px 0;
 }
