--- a/assets/sass/_hero.sass
+++ b/assets/sass/_hero.sass
@@ -15,7 +15,12 @@
         display: flex
   .article
     &-post
+      height: 600px
       position: relative
+      img
+        width: 100%
+        height: 100%
+        object-fit: cover
     &-permalink, &-btn
       position: absolute
       top: 25%
