--- a/assets/sass/_programs.sass
+++ b/assets/sass/_programs.sass
@@ -1,13 +1,6 @@
 .programs
   padding-top: 50px
   padding-bottom: 100px
-  border-bottom: 1px solid #C02223
-  h2
-    font-weight: 500
-    font-size: 30px
-    line-height: 36px
-    color: #323232
-    margin-bottom: 40px
   &-slider
     overflow: inherit
   .swiper-slide
@@ -16,7 +9,10 @@
     opacity: 1
   &-article
     &-post
+      height: 350px
       display: flex
+      img
+        object-fit: cover
     &-text
       padding-top: 45px
       padding-left: 30px
@@ -36,18 +32,6 @@
       color: #323232
       margin: 0
       margin-bottom: 30px
-  &-link
-    margin: 0 auto
-    margin-top: 50px
-    text-decoration: none
-    color: #C02223
-    border: 1px solid #C02223
-    width: 270px
-    height: 60px
-    text-transform: uppercase
-    display: flex
-    justify-content: center
-    align-items: center
   .swiper
     &-slide-prev
       opacity: 0
