--- a/assets/sass/museum-theme.sass
+++ b/assets/sass/museum-theme.sass
@@ -10,3 +10,9 @@
 @import 'poster'
 @import 'programs'
 @import 'news'
+@import 'pagination'
+@import 'breadcrumbs'
+@import 'category'
+@import 'single'
+@import 'comments'
+@import 'contacts'
