--- a/assets/sass/_footer.sass
+++ b/assets/sass/_footer.sass
@@ -2,6 +2,15 @@
   padding: 50px 0 30px
   background-color: #C02223
   color: #ffffff
+  &-logo
+    img
+      filter: brightness(7)
+    a
+      text-decoration: none
+    .logo
+      max-width: 380px
+      &-name
+        color: #ffffff
   section
     padding: initial
   &-wrapper
@@ -27,15 +36,6 @@
     display: flex
     align-items: flex-start
     justify-content: space-between
-    img
-      filter: brightness(7)
-      display: flex
-      align-items: center
-      justify-content: space-between
-    .logo
-      max-width: 380px
-      &-name
-        color: #ffffff
   &-menu
     &-title
       color: #ffffff
