--- a/assets/sass/_sidebar.sass
+++ b/assets/sass/_sidebar.sass
@@ -21,7 +21,9 @@
     font-weight: 500
     font-size: 15px
     &-wrapper
-      margin-bottom: 10px
+      margin-bottom: 5px
+    img
+      display: flex
     a
       display: block
       padding-bottom: 5px
