--- a/assets/sass/_poster.sass
+++ b/assets/sass/_poster.sass
@@ -23,7 +23,7 @@
     display: grid
     grid-template-columns: repeat(3, 1fr)
     grid-template-rows: 1fr
-    gap: 30px
+    grid-gap: 30px
     &-content
       font-weight: 500
       a
