--- a/assets/css/museum-theme.css
+++ b/assets/css/museum-theme.css
@@ -3,6 +3,10 @@
   outline: none;
 }
 
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 .go-top {
   opacity: 0;
   transition: opacity 1500ms;
@@ -339,6 +343,42 @@ body {
 
 .widget-social-link-fb, .widget-social-link-vk, .widget-social-link-twit, .widget-social-link-yt {
   opacity: 0.7;
+}
+
+.widget-posts {
+  margin: 0;
+}
+
+.widget-posts-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-gap: 30px;
+}
+
+.widget-posts .posts-link {
+  text-decoration: none;
+}
+
+.widget-posts .posts-thumb {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+}
+
+.widget-posts .posts-title {
+  line-height: 1.1;
+  color: #333333;
+}
+
+.widget-posts .posts-info {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  color: #A2A2A2;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .footer {
@@ -1019,9 +1059,8 @@ body {
   }
 }
 
-.site-main {
-  background-color: #ffffff;
-  padding-bottom: 23px;
+.post-nav {
+  width: 300px;
 }
 
 .post-nav-prev svg {
@@ -1029,405 +1068,74 @@ body {
 }
 
 .post-header {
-  padding: 60px 0 0;
-  color: #ffffff;
+  color: #323232;
 }
 
-.post-header-wrapper {
-  position: relative;
-  padding-bottom: 72px;
+.post-header span {
+  color: #C02223;
 }
 
 .post-header-title {
-  font-family: 'Roboto Slab';
-  font-style: normal;
-  font-weight: bold;
-  font-size: 55px;
-  line-height: 70px;
-  max-width: 750px;
-  margin: 0;
+  font-weight: 500;
+  font-size: 46px;
+  line-height: 140%;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
-.post-header-title-wrapper {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  padding-bottom: 20px;
-}
-
-.post-header .bookmark {
-  padding: 15px 10px 0 0;
-  border: none;
-  background: none;
-}
-
-.post-header .bookmark-icon {
-  fill: #BCBFC2;
-}
-
-.post-header-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.post-header .home-link {
-  text-decoration: none;
-  color: #ffffff;
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  line-height: 20px;
-  margin-left: auto;
-  margin-right: 30px;
-}
-
-.post-header .home-link svg {
-  fill: #ffffff;
-  margin-right: 6px;
-}
-
-.post-header .nav-links {
-  min-width: 180px;
-}
-
-.post-header .nav-links a {
-  color: #ffffff;
-  text-decoration: none;
-  font-size: 14px;
-  line-height: 20px;
-}
-
-.post-header .nav-links svg {
-  fill: #ffffff;
-  margin-left: 8px;
-  margin-right: 8px;
-}
-
-.post-header .navigation {
-  margin: 0;
-}
-
-.post-header p {
-  font-size: 18px;
-  line-height: 30px;
-  margin-bottom: 43px;
-  max-width: 630px;
-  opacity: 0.85;
-}
-
-.post-header-info {
-  display: flex;
-  align-items: center;
-}
-
-.post-header-date, .post-header-comments, .post-header-likes {
-  opacity: 0.85;
-}
-
-.post-header-date:not(:last-child), .post-header-comments:not(:last-child), .post-header-likes:not(:last-child) {
-  margin-right: 22px;
-}
-
-.post-header-date svg, .post-header-comments svg, .post-header-likes svg {
-  margin-right: 6px;
-  fill: #FFFFFF;
-  opacity: 0.5;
-}
-
-.post-author {
-  position: absolute;
-  right: 0;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  background-color: #ffffff;
-  border-radius: 10px;
-  overflow: hidden;
-  border: 1px solid #D9DADB;
-  min-width: 263px;
-}
-
-.post-author-avatar {
-  width: 90px;
-  height: 90px;
-  border-radius: 50%;
+.post-image {
   object-fit: cover;
-}
-
-.post-author-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: #262D33;
-  padding: 35px 25px 20px;
-}
-
-.post-author-name {
-  font-family: 'Roboto Slab';
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 25px;
-  margin-top: 15px;
-  margin-bottom: 5px;
-}
-
-.post-author-rank {
-  font-size: 14px;
-  line-height: 20px;
-  color: #4B5157;
-  margin-bottom: 15px;
-}
-
-.post-author-posts {
-  font-size: 14px;
-  line-height: 20px;
-  font-family: 'Lato Black';
-}
-
-.post-author-link {
-  color: #262D33;
-  padding: 15px 25px;
-  text-decoration: none;
-  border-top: 1px solid #D9DADB;
   width: 100%;
-  text-align: center;
-  font-family: 'Lato Black';
-  font-size: 14px;
-  line-height: 20px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .post-content {
-  padding-top: 60px;
-  padding-bottom: 30px;
+  margin-bottom: 60px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 130%;
+}
+
+.post-content-wrapper {
+  max-width: 850px;
+  margin: 0 auto;
+  border-bottom: 1px solid #C02223;
 }
 
 .post-content p {
-  font-size: 18px;
-  line-height: 30px;
-  color: #4B5157;
-  margin: 30px 0;
-}
-
-.post-content > p:first-child {
-  max-width: 623px;
-}
-
-.post-content .has-drop-cap:not(:focus):first-letter {
-  color: #4592FF;
-  font-family: 'Lato Black';
-}
-
-.post-content h1, .post-content h2, .post-content h3, .post-content h4, .post-content h5, .post-content h6 {
-  font-family: 'Roboto Slab';
+  font-family: 'Open Sans';
   font-style: normal;
-  font-weight: bold;
-  line-height: 30px;
+  color: #666666;
 }
 
-.post-content h1 {
-  font-size: 30px;
+.post-footer {
+  max-width: 850px;
+  margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.post-content h2 {
-  font-size: 25px;
+.post-social {
+  display: flex;
+  align-items: end;
 }
 
-.post-content h3 {
-  font-size: 22px;
+.post .meks_ess_share_label {
+  margin-top: -10px;
+  margin-right: 30px;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 100%;
+  color: #666666;
 }
 
-.post-content h4 {
-  font-size: 18px;
-}
-
-.post-content h5 {
-  font-size: 16px;
-}
-
-.post-content h6 {
-  font-size: 14px;
-}
-
-.post-content ul, .post-content ol {
-  margin-top: 20px;
-  padding: 0;
-  margin-left: 20px;
-  font-size: 18px;
-  line-height: 30px;
-}
-
-.post-content blockquote {
-  font-family: 'Roboto Slab';
-  font-style: normal;
-  font-weight: bold;
-  font-size: 25px;
-  line-height: 30px;
-  color: #262D33;
-  margin-left: 0;
-  margin-top: 80px;
-  margin-bottom: 40px;
-  position: relative;
-}
-
-.post-content blockquote::before {
-  position: absolute;
-  top: -20px;
-  left: -20px;
-  content: '';
-  background-image: url("../images/quote.svg");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center;
-  width: 70px;
-  height: 70px;
-  z-index: -1;
-}
-
-.post-content blockquote cite {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 15px;
-}
-
-.post-content code, .post-content pre {
-  font-size: 18px;
-  white-space: pre-wrap;
-}
-
-.post-content code a, .post-content pre a {
+.post .nav-links a {
+  color: #323232;
   text-decoration: none;
-  color: inherit;
-}
-
-.post-content code a:hover, .post-content pre a:hover {
-  text-decoration: underline;
-}
-
-.post-content table, .post-content td, .post-content tr {
-  border: 1px solid black;
-  border-collapse: collapse;
-  font-size: 18px;
-  line-height: 30px;
-  margin-bottom: 5px;
-}
-
-.post-content table td, .post-content td td, .post-content tr td {
-  padding: 5px;
-}
-
-.post-content .wp-block-cover, .post-content .wp-block-media-text {
-  margin-bottom: 25px;
-}
-
-.post-content .wp-block-pullquote {
-  padding: 1em 0;
-}
-
-.post .tags-links {
-  padding-bottom: 60px;
-  border-bottom: 1px solid #D9DADB;
-  max-width: 623px;
-  width: 100%;
-  display: block;
-}
-
-.post .tags-links a {
-  text-decoration: none;
-  font-size: 14px;
-  line-height: 20px;
-  padding: 5px 15px;
-  color: #262D33;
-  border: 1px solid #D9DADB;
-  border-radius: 5px;
-  margin-right: 10px;
-}
-
-.meks_ess {
-  max-width: 623px;
-  margin-top: 0;
-}
-
-.meks_ess_share_label {
-  font-family: 'Roboto Slab';
-  font-size: 25px;
-  line-height: 30px;
-  margin-top: 30px;
-  margin-bottom: 25px;
-}
-
-@media screen and (max-width: 1200px) {
-  .post-content > p:first-child {
-    max-width: 500px;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .post-content > p:first-child {
-    max-width: 400px;
-  }
-}
-
-@media screen and (max-width: 780px) {
-  .post-content > p:first-child {
-    max-width: 300px;
-  }
-}
-
-@media screen and (max-width: 650px) {
-  .post-header-info {
-    margin-bottom: 20px;
-  }
-  .post-content > p:first-child {
-    padding-top: 150px;
-    max-width: 400px;
-  }
-}
-
-@media screen and (max-width: 540px) {
-  .post-header-title-wrapper {
-    flex-wrap: wrap;
-  }
-  .post-content blockquote::before {
-    left: -10px;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .post-header .navigation {
-    margin: 0 auto;
-  }
-  .post-header-nav {
-    flex-wrap: wrap;
-  }
-  .post-header-nav .home-link {
-    margin-left: 100px;
-  }
-  .post-header-nav .nav-links {
-    padding-top: 30px;
-  }
-  .post-header-title-wrapper {
-    margin-top: -30px;
-  }
-}
-
-@media screen and (max-width: 468px) {
-  .post-header-title {
-    font-size: 40px;
-    line-height: 55px;
-  }
-}
-
-@media screen and (max-width: 380px) {
-  .post-header-nav .home-link {
-    margin-left: auto;
-  }
-  .post-header-title {
-    font-size: 35px;
-  }
 }
 
 .comments-area {
