--- a/assets/sass/_sidebar.sass
+++ b/assets/sass/_sidebar.sass
@@ -51,3 +51,28 @@
         margin-left: 15px
       &-fb, &-vk, &-twit, &-yt
         opacity: 0.7
+  &-posts
+    margin: 0
+    &-wrapper
+      display: grid
+      grid-template-columns: repeat(3, 1fr)
+      grid-template-rows: 1fr
+      grid-gap: 30px
+    .posts
+      &-link
+        text-decoration: none
+      &-thumb
+        width: 100%
+        height: 180px
+        object-fit: cover
+      &-title
+        line-height: 1.1
+        color: #333333
+      &-info
+        display: block
+        font-weight: 500
+        font-size: 16px
+        line-height: 100%
+        color: #A2A2A2
+        margin-top: 20px
+        margin-bottom: 10px
