--- a/assets/sass/_single.sass
+++ b/assets/sass/_single.sass
@@ -1,304 +1,57 @@
-.site-main
-  background-color: #ffffff
-  padding-bottom: 23px
 .post
   &-nav
+    width: 300px
     &-prev
       svg
         transform: rotate(180deg)
   &-header
-    padding: 60px 0 0
-    color: #ffffff
-    &-wrapper
-      position: relative
-      padding-bottom: 72px
+    color: #323232
+    span
+      color: #C02223
     &-title
-      font-family: 'Roboto Slab'
-      font-style: normal
-      font-weight: bold
-      font-size: 55px
-      line-height: 70px
-      max-width: 750px
-      margin: 0
-      &-wrapper
-        display: flex
-        align-items: flex-start
-        justify-content: space-between
-        padding-bottom: 20px
-    .bookmark
-      padding: 15px 10px 0 0
-      border: none
-      background: none
-      &-icon
-        fill: #BCBFC2
-    &-nav
-      display: flex
-      align-items: center
-      justify-content: space-between
-    .home
-      &-link
-        text-decoration: none
-        color: #ffffff
-        display: flex
-        align-items: center
-        font-size: 14px
-        line-height: 20px
-        margin-left: auto
-        margin-right: 30px
-        svg
-          fill: #ffffff
-          margin-right: 6px
-    .nav-links
-      min-width: 180px
-      a
-        color: #ffffff
-        text-decoration: none
-        font-size: 14px
-        line-height: 20px
-      svg
-        fill: #ffffff
-        margin-left: 8px
-        margin-right: 8px
-    .navigation
-      margin: 0
+      font-weight: 500
+      font-size: 46px
+      line-height: 140%
+      margin-top: 30px
+      margin-bottom: 20px
+  &-image
+    object-fit: cover
+    width: 100%
+    padding-top: 50px
+    padding-bottom: 50px
+  &-content
+    margin-bottom: 60px
+    font-weight: 500
+    font-size: 18px
+    line-height: 130%
+    &-wrapper
+      max-width: 850px
+      margin: 0 auto
+      border-bottom: 1px solid #C02223
     p
-      font-size: 18px
-      line-height: 30px
-      margin-bottom: 43px
-      max-width: 630px
-      opacity: 0.85
-    &-info
-      display: flex
-      align-items: center
-    &-date, &-comments, &-likes
-      opacity: 0.85
-      &:not(:last-child)
-        margin-right: 22px
-      svg
-        margin-right: 6px
-        fill: #FFFFFF
-        opacity: 0.5
-  &-author
-    position: absolute
-    right: 0
+      font-family: 'Open Sans'
+      font-style: normal
+      color: #666666
+  &-footer
+    max-width: 850px
+    margin: 0 auto
+    padding-top: 20px
+    padding-bottom: 80px
     display: flex
     align-items: center
-    flex-direction: column
-    justify-content: center
-    background-color: #ffffff
-    border-radius: 10px
-    overflow: hidden
-    border: 1px solid #D9DADB
-    min-width: 263px
-    &-avatar
-      width: 90px
-      height: 90px
-      border-radius: 50%
-      object-fit: cover
-    &-info
-      display: flex
-      flex-direction: column
-      align-items: center
-      justify-content: center
-      color: #262D33
-      padding: 35px 25px 20px
-    &-name
-      font-family: 'Roboto Slab'
-      font-style: normal
-      font-weight: bold
-      font-size: 20px
-      line-height: 25px
-      margin-top: 15px
-      margin-bottom: 5px
-    &-rank
-      font-size: 14px
-      line-height: 20px
-      color: #4B5157
-      margin-bottom: 15px
-    &-posts
-      font-size: 14px
-      line-height: 20px
-      font-family: 'Lato Black'
-    &-link
-      color: #262D33
-      padding: 15px 25px
-      text-decoration: none
-      border-top: 1px solid #D9DADB
-      width: 100%
-      text-align: center
-      font-family: 'Lato Black'
-      font-size: 14px
-      line-height: 20px
-  &-content
-    padding-top: 60px
-    padding-bottom: 30px
-    p
-      font-size: 18px
-      line-height: 30px
-      color: #4B5157
-      margin: 30px 0
-    & > p:first-child
-      max-width: 623px
-    .has-drop-cap
-      &:not(:focus)
-        &:first-letter
-          color: #4592FF
-          font-family: 'Lato Black'
-    h1, h2, h3, h4, h5, h6
-      font-family: 'Roboto Slab'
-      font-style: normal
-      font-weight: bold
-      line-height: 30px
-    h1
-      font-size: 30px
-    h2
-      font-size: 25px
-    h3
-      font-size: 22px
-    h4
-      font-size: 18px
-    h5
-      font-size: 16px
-    h6
-      font-size: 14px
-    ul, ol
-      margin-top: 20px
-      padding: 0
-      margin-left: 20px
-      font-size: 18px
-      line-height: 30px
-    blockquote
-      font-family: 'Roboto Slab'
-      font-style: normal
-      font-weight: bold
-      font-size: 25px
-      line-height: 30px
-      color: #262D33
-      margin-left: 0
-      margin-top: 80px
-      margin-bottom: 40px
-      position: relative
-      &::before
-        position: absolute
-        top: -20px
-        left: -20px
-        content: ''
-        background-image: url('../images/quote.svg')
-        background-repeat: no-repeat
-        background-size: 100%
-        background-position: center
-        width: 70px
-        height: 70px
-        z-index: -1
-      cite
-        font-style: normal
-        font-size: 14px
-        line-height: 15px
-    code, pre
-      font-size: 18px
-      white-space: pre-wrap
-      a
-        text-decoration: none
-        color: inherit
-        &:hover
-          text-decoration: underline
-    table, td, tr
-      border: 1px solid black
-      border-collapse: collapse
-      font-size: 18px
-      line-height: 30px
-      margin-bottom: 5px
-      td
-        padding: 5px
-    .wp-block
-      &-cover, &-media-text
-        margin-bottom: 25px
-      &-pullquote
-        padding: 1em 0
-  .tags-links
-    padding-bottom: 60px
-    border-bottom: 1px solid #D9DADB
-    max-width: 623px
-    width: 100%
-    display: block
+    justify-content: space-between
+  &-social
+    display: flex
+    align-items: end
+  .meks_ess
+    &_share_label
+      margin-top: -10px
+      margin-right: 30px
+      font-weight: 500
+      font-size: 15px
+      line-height: 100%
+      color: #666666
+  .nav-links
     a
+      color: #323232
       text-decoration: none
-      font-size: 14px
-      line-height: 20px
-      padding: 5px 15px
-      color: #262D33
-      border: 1px solid #D9DADB
-      border-radius: 5px
-      margin-right: 10px
-.meks_ess
-  max-width: 623px
-  margin-top: 0
-  &_share_label
-    font-family: 'Roboto Slab'
-    font-size: 25px
-    line-height: 30px
-    margin-top: 30px
-    margin-bottom: 25px
-
-@media screen and (max-width: 1200px)
-  .post
-    &-content
-      & > p:first-child
-        max-width: 500px
-@media screen and (max-width: 900px)
-  .post
-    &-content
-      & > p:first-child
-        max-width: 400px
-@media screen and (max-width: 780px)
-  .post
-    &-content
-      & > p:first-child
-        max-width: 300px
-@media screen and (max-width: 650px)
-  .post
-    &-header
-      &-info
-        margin-bottom: 20px
-    &-content
-      & > p:first-child
-        padding-top: 150px
-        max-width: 400px
-@media screen and (max-width: 540px)
-  .post
-    &-header
-      &-title
-        &-wrapper
-          flex-wrap: wrap
-    &-content
-      blockquote
-        &::before
-          left: -10px
-@media screen and (max-width: 500px)
-  .post
-    &-header
-      .navigation
-        margin: 0 auto
-      &-nav
-        flex-wrap: wrap
-        .home-link
-          margin-left: 100px
-        .nav-links
-          padding-top: 30px
-      &-title
-        &-wrapper
-          margin-top: -30px
-@media screen and (max-width: 468px)
-  .post
-    &-header
-      &-title
-        font-size: 40px
-        line-height: 55px
-@media screen and (max-width: 380px)
-  .post
-    &-header
-      &-nav
-        .home-link
-          margin-left: auto
-      &-title
-        font-size: 35px
