--- a/assets/sass/museum-theme.sass
+++ b/assets/sass/museum-theme.sass
@@ -2,6 +2,9 @@
   box-sizing: border-box
   outline: none
 
+body
+  font-family: 'Roboto', sans-serif
+
 @import 'grid'
 @import 'header'
 @import 'sidebar'
