--- a/assets/css/museum-theme.css
+++ b/assets/css/museum-theme.css
@@ -1068,14 +1068,11 @@ body {
 }
 
 .post-header {
-  color: #323232;
-}
-
-.post-header span {
   color: #C02223;
 }
 
 .post-header-title {
+  color: #323232;
   font-weight: 500;
   font-size: 46px;
   line-height: 140%;
@@ -1328,49 +1325,34 @@ body {
   }
 }
 
-.section-dark {
-  background: #262D33;
-  color: #ffffff;
-  padding: 50px 122px;
+.section {
+  padding-top: 0;
 }
 
 .page-title {
-  font-family: 'Roboto Slab';
-  font-style: normal;
-  font-weight: bold;
-  font-size: 40px;
-  line-height: 50px;
-  margin-top: 0;
-  margin-bottom: 27px;
+  color: #323232;
+  font-weight: 500;
+  font-size: 46px;
+  line-height: 140%;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 .contacts-title {
+  color: #323232;
+  font-weight: normal;
   font-size: 18px;
-  line-height: 30px;
-  margin-bottom: 28px;
+  margin: 0;
 }
 
 .contacts-wrapper {
-  display: flex;
-  align-items: flex-start;
-}
-
-.contacts-wrapper .left {
-  margin-right: 80px;
-}
-
-.contacts-wrapper .right a, .contacts-wrapper .right address {
-  text-decoration: none;
-  color: rgba(255, 255, 255, 0.85);
-  font-style: normal;
-  margin-bottom: 15px;
-  display: block;
-  font-size: 14px;
-  line-height: 20px;
+  max-width: 850px;
+  margin: 0 auto;
 }
 
 .contacts-form {
-  max-width: 460px;
+  padding-top: 25px;
+  width: 550px;
 }
 
 .contacts-input {
@@ -1383,13 +1365,13 @@ body {
 }
 
 .contacts-input::placeholder {
-  color: #939699;
+  color: #A2A2A2;
 }
 
 .contacts-textarea {
   width: 100%;
   padding: 10px 15px;
-  min-height: 120px;
+  min-height: 220px;
   font-size: 14px;
   line-height: 20px;
   margin-bottom: 20px;
@@ -1397,32 +1379,13 @@ body {
 }
 
 .contacts-textarea::placeholder {
-  color: #939699;
+  color: #A2A2A2;
 }
 
-@media screen and (max-width: 1100px) {
-  .section-dark {
-    padding: 50px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .section-dark {
-    padding: 50px 20px;
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .contacts-wrapper {
-    align-items: unset;
-    flex-direction: column;
-  }
-  .contacts-wrapper .left {
-    margin-right: unset;
-    margin-bottom: 25px;
-  }
-  .contacts-form {
-    max-width: unset;
-    width: 100%;
-  }
+.more {
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 20px;
+  border: 1px solid;
+  cursor: pointer;
 }
