--- a/assets/sass/_contacts.sass
+++ b/assets/sass/_contacts.sass
@@ -1,38 +1,25 @@
 .section
-  &-dark
-    background: #262D33
-    color: #ffffff
-    padding: 50px 122px
+  padding-top: 0
 .page
   &-title
-    font-family: 'Roboto Slab'
-    font-style: normal
-    font-weight: bold
-    font-size: 40px
-    line-height: 50px
-    margin-top: 0
-    margin-bottom: 27px
+    color: #323232
+    font-weight: 500
+    font-size: 46px
+    line-height: 140%
+    margin-top: 30px
+    margin-bottom: 20px
 .contacts
   &-title
+    color: #323232
+    font-weight: normal
     font-size: 18px
-    line-height: 30px
-    margin-bottom: 28px
+    margin: 0
   &-wrapper
-    display: flex
-    align-items: flex-start
-    .left
-      margin-right: 80px
-    .right
-      a, address
-        text-decoration: none
-        color: rgba(#ffffff, 0.85)
-        font-style: normal
-        margin-bottom: 15px
-        display: block
-        font-size: 14px
-        line-height: 20px
+    max-width: 850px
+    margin: 0 auto
   &-form
-    max-width: 460px
+    padding-top: 25px
+    width: 550px
   &-input
     width: 100%
     padding: 10px 15px
@@ -41,33 +28,20 @@
     line-height: 20px
     margin-bottom: 10px
     &::placeholder
-      color: #939699
+      color: #A2A2A2
   &-textarea
     width: 100%
     padding: 10px 15px
-    min-height: 120px
+    min-height: 220px
     font-size: 14px
     line-height: 20px
     margin-bottom: 20px
     resize: none
     &::placeholder
-      color: #939699
-@media screen and (max-width: 1100px)
-  .section
-    &-dark
-      padding: 50px
-@media screen and (max-width: 768px)
-  .section
-    &-dark
-      padding: 50px 20px
-@media screen and (max-width: 640px)
-  .contacts
-    &-wrapper
-      align-items: unset
-      flex-direction: column
-      .left
-        margin-right: unset
-        margin-bottom: 25px
-    &-form
-      max-width: unset
-      width: 100%
+      color: #A2A2A2
+.more
+  display: inline-block
+  padding: 10px 20px
+  border-radius: 20px
+  border: 1px solid
+  cursor: pointer
