--- a/assets/sass/_contacts.sass
+++ b/assets/sass/_contacts.sass
@@ -22,6 +22,7 @@
     width: 550px
   &-input
     width: 100%
+    border: 1px solid
     padding: 10px 15px
     height: 40px
     font-size: 14px
@@ -31,6 +32,7 @@
       color: #A2A2A2
   &-textarea
     width: 100%
+    border: 1px solid
     padding: 10px 15px
     min-height: 220px
     font-size: 14px
