Адаптив + Мелкие правки

--- a/assets/sass/_comments.sass
+++ b/assets/sass/_comments.sass
@@ -2,12 +2,11 @@
   &-area
     max-width: 750px
   &-title
-    font-family: 'Roboto Slab'
     font-size: 40px
     line-height: 50px
   &-count
     color: #939699
-    font-family: 'Lato Regular'
+    font-family: 'Open Sans'
     font-style: normal
     font-weight: normal
     font-size: 40px
@@ -54,8 +53,6 @@
     padding-bottom: 29px
   &-author
     &-name
-      font-family: 'Roboto Slab'
-      font-style: normal
       font-size: 16px
       line-height: 25px
       a
@@ -86,7 +83,6 @@
       border-radius: 50%
       margin-right: 20px
   &-label
-    font-family: 'Roboto Slab'
     color: #262D33
     font-size: 20px
     line-height: 25px
