--- a/assets/sass/_contacts.sass
+++ b/assets/sass/_contacts.sass
@@ -47,3 +47,8 @@
   border-radius: 20px
   border: 1px solid
   cursor: pointer
+
+@media screen and (max-width: 640px)
+  .contacts
+    &-form
+      width: 100%
