--- a/assets/sass/_single.sass
+++ b/assets/sass/_single.sass
@@ -54,3 +54,13 @@
     a
       color: #323232
       text-decoration: none
+
+@media screen and (max-width: 560px)
+  .post
+    &-footer
+      flex-wrap: wrap
+@media screen and (max-width: 380px)
+  .post
+    &-header
+      &-title
+        font-size: 30px
