--- a/assets/css/museum-theme.css
+++ b/assets/css/museum-theme.css
@@ -193,7 +193,7 @@ body {
   content: '';
   top: 0;
   left: -1500px;
-  width: 136vw;
+  width: 500%;
   height: 230px;
   background: #FFFFFF;
 }
@@ -207,15 +207,11 @@ body {
     flex-wrap: wrap;
   }
   .header-nav {
-    order: 5;
     padding-top: 20px;
   }
   .header-menu {
+    margin-top: 0;
     flex-wrap: wrap;
-  }
-  .menu-item a {
-    margin-left: 0;
-    margin-right: 30px;
   }
 }
 
@@ -231,7 +227,7 @@ body {
     width: calc(40% + 40px);
     background-color: #ffffff;
     padding: 30px;
-    z-index: 99;
+    z-index: 10;
     border-radius: 10px;
     box-shadow: 1px 1px 10px rgba(38, 45, 51, 0.2);
   }
@@ -240,12 +236,12 @@ body {
     align-items: flex-start;
   }
   .header-menu a {
-    color: #000;
+    color: #323232;
   }
   .header-menu-toggle {
     display: flex;
-    width: 30px;
-    height: 20px;
+    min-width: 30px;
+    height: 30px;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
@@ -253,11 +249,41 @@ body {
   }
   .header-menu-toggle span {
     width: 100%;
-    height: 1px;
-    background-color: #ffffff;
+    height: 3px;
+    background-color: #323232;
   }
   .header .menu-item:not(:last-child) {
-    margin-bottom: 15px;
+    padding-bottom: 10px;
+  }
+  .sub-menu {
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header-wrapper {
+    flex-wrap: unset;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .sub-menu {
+    width: 250%;
+    padding-left: 15px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px rgba(38, 45, 51, 0.2);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .sub-menu {
+    width: 220%;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .sub-menu {
+    width: 185%;
   }
 }
 
@@ -307,6 +333,7 @@ body {
 .widget-phones a {
   display: block;
   padding-bottom: 5px;
+  cursor: pointer;
 }
 
 .widget-phones a:nth-child(2) {
@@ -381,6 +408,18 @@ body {
   margin-bottom: 10px;
 }
 
+@media screen and (max-width: 768px) {
+  .widget-posts-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .widget-posts-wrapper {
+    grid-template-columns: 1fr;
+  }
+}
+
 .footer {
   padding: 50px 0 30px;
   background-color: #C02223;
@@ -405,20 +444,6 @@ body {
 
 .footer section {
   padding: initial;
-}
-
-.footer-wrapper {
-  display: flex;
-}
-
-.footer-nav {
-  display: flex;
-  flex-direction: column;
-  color: #ffffff;
-}
-
-.footer-nav-wrapper {
-  color: #ffffff;
 }
 
 .footer ul {
@@ -451,22 +476,11 @@ body {
   line-height: unset;
 }
 
-.footer-menu ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.footer-menu ul li {
-  margin-bottom: 10px;
-}
-
-.footer-menu ul li a {
-  color: #ffffff;
+.footer-menu a {
   text-decoration: none;
 }
 
-.footer-menu ul li a:hover {
+.footer-menu a:hover {
   text-decoration: underline;
 }
 
@@ -533,56 +547,61 @@ body {
 }
 
 @media screen and (max-width: 1200px) {
-  .footer-menu {
-    flex-basis: 30%;
-  }
-  .footer-menu-bar {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
   .footer-text {
-    max-width: 480px;
+    margin-top: 10px;
   }
-  .footer-info .logo {
-    margin-right: 15px;
+  .footer-text-wrapper {
+    justify-content: center;
+    padding-top: 15px;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .footer-info {
+    flex-wrap: wrap;
+  }
+  .footer-nav-wrapper {
+    margin-bottom: 30px;
   }
 }
 
 @media screen and (max-width: 800px) {
-  .footer-menu {
-    flex-basis: 50%;
-  }
-  .footer-social {
-    margin-top: 30px;
-  }
   .footer-info {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .footer-text {
-    max-width: 100%;
-  }
-  .footer-text-wrapper {
-    flex-direction: column;
-  }
-  .footer-text-wrapper a {
-    padding-bottom: 15px;
+    justify-content: space-between;
   }
 }
 
-@media screen and (max-width: 600px) {
-  .footer-nav {
-    flex-wrap: wrap;
-    justify-content: center;
+@media screen and (max-width: 768px) {
+  .footer-nav-wrapper {
+    flex-basis: 30%;
+    text-align: right;
+  }
+  .footer-nav-wrapper .menu-item {
+    margin-right: 0;
+  }
+  .footer-text-wrapper {
+    justify-content: unset;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .footer-info {
+    flex-direction: column;
+  }
+  .footer-logo {
+    padding-bottom: 20px;
   }
   .footer-nav-wrapper {
-    margin-right: unset;
+    flex-basis: unset;
+    text-align: unset;
+    margin-bottom: 5px;
   }
-  .footer-info ul li {
-    padding-bottom: 15px;
+  .footer-menu {
+    margin-bottom: 20px;
   }
-  .footer-social {
-    margin-top: 10px;
+  .footer-text-wrapper {
+    margin-top: 20px;
   }
 }
 
@@ -691,6 +710,37 @@ body {
   width: 42px;
 }
 
+@media screen and (max-width: 1230px) {
+  .hero-slider {
+    overflow: hidden;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero .article-permalink {
+    width: 500px;
+  }
+  .hero .article-title {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .hero .article-permalink {
+    width: auto;
+    padding-right: 20px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .hero .article-btn {
+    width: 220px;
+  }
+  .hero .article-title {
+    font-size: 26px;
+  }
+}
+
 .poster {
   padding-bottom: 50px;
 }
@@ -738,7 +788,7 @@ body {
 }
 
 .poster-posts-thumb {
-  min-width: 380px;
+  width: 100%;
   object-fit: cover;
 }
 
@@ -754,6 +804,24 @@ body {
   line-height: 130%;
   color: #323232;
   margin: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .poster-posts {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .poster-posts {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .poster h1 {
+    margin-bottom: 15px;
+  }
 }
 
 .programs {
@@ -817,7 +885,7 @@ body {
   color: #C02223;
   position: absolute;
   top: 0;
-  right: 485px;
+  right: 490px;
   height: 16px;
   display: flex;
   align-items: center;
@@ -843,6 +911,36 @@ body {
 .programs .swiper-button-next::after, .programs .swiper-button-prev::after {
   content: '';
   width: 42px;
+}
+
+@media screen and (max-width: 1230px) {
+  .programs-slider {
+    overflow: hidden;
+  }
+  .programs .swiper-button-arr {
+    right: 220px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .programs-article-post {
+    height: auto;
+    flex-wrap: wrap;
+  }
+  .programs-article-post img {
+    width: 100%;
+  }
+  .programs-article-text {
+    padding-left: 0;
+  }
+  .programs-article-text p:last-child {
+    margin-bottom: 50px;
+  }
+  .programs .swiper-button-arr {
+    top: unset;
+    right: 65px;
+    bottom: 0;
+  }
 }
 
 .news {
@@ -907,6 +1005,28 @@ body {
 
 .news-posts-text p {
   margin: 20px 0;
+}
+
+@media screen and (max-width: 1200px) {
+  .news-posts .item-1 {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .news-posts {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+  .news-posts .item-1 {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .news-posts .item-2 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  .news-posts .item-3 {
+    grid-area: 3 / 1 / 4 / 2;
+  }
 }
 
 .pagination .nav-links {
@@ -993,7 +1113,7 @@ body {
   padding-top: 30px;
   padding-bottom: 20px;
   font-size: 15px;
-  line-height: 100%;
+  line-height: 1.5;
   color: #666666;
   margin-right: 30px;
 }
@@ -1047,15 +1167,15 @@ body {
   margin-bottom: 5px;
 }
 
-@media screen and (max-width: 1200px) {
-  .post-card {
-    width: 48%;
+@media screen and (max-width: 1024px) {
+  .category-list {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media screen and (max-width: 615px) {
-  .post-card {
-    width: 100%;
+@media screen and (max-width: 768px) {
+  .category-list {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -1135,19 +1255,30 @@ body {
   text-decoration: none;
 }
 
+@media screen and (max-width: 560px) {
+  .post-footer {
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .post-header-title {
+    font-size: 30px;
+  }
+}
+
 .comments-area {
   max-width: 750px;
 }
 
 .comments-title {
-  font-family: 'Roboto Slab';
   font-size: 40px;
   line-height: 50px;
 }
 
 .comments-count {
   color: #939699;
-  font-family: 'Lato Regular';
+  font-family: 'Open Sans';
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
@@ -1208,8 +1339,6 @@ body {
 }
 
 .comment-author-name {
-  font-family: 'Roboto Slab';
-  font-style: normal;
   font-size: 16px;
   line-height: 25px;
 }
@@ -1260,7 +1389,6 @@ body {
 }
 
 .comment-label {
-  font-family: 'Roboto Slab';
   color: #262D33;
   font-size: 20px;
   line-height: 25px;
@@ -1390,4 +1518,10 @@ body {
   border-radius: 20px;
   border: 1px solid;
   cursor: pointer;
+}
+
+@media screen and (max-width: 640px) {
+  .contacts-form {
+    width: 100%;
+  }
 }
