--- a/assets/sass/_breadcrumbs.sass
+++ b/assets/sass/_breadcrumbs.sass
@@ -2,7 +2,7 @@
   padding-top: 30px
   padding-bottom: 20px
   font-size: 15px
-  line-height: 100%
+  line-height: 1.5
   color: #666666
   margin-right: 30px
   &__separator
