--- a/assets/sass/_category.sass
+++ b/assets/sass/_category.sass
@@ -27,11 +27,11 @@
       margin-top: 15px
       margin-bottom: 5px
 
-@media screen and (max-width: 1200px)
-  .post
-    &-card
-      width: 48%
-@media screen and (max-width: 615px)
-  .post
-    &-card
-      width: 100%
+@media screen and (max-width: 1024px)
+  .category
+    &-list
+      grid-template-columns: repeat(2, 1fr)
+@media screen and (max-width: 768px)
+  .category
+    &-list
+      grid-template-columns: 1fr
