--- a/assets/sass/_footer.sass
+++ b/assets/sass/_footer.sass
@@ -13,14 +13,6 @@
         color: #ffffff
   section
     padding: initial
-  &-wrapper
-    display: flex
-  &-nav
-    display: flex
-    flex-direction: column
-    color: #ffffff
-    &-wrapper
-      color: #ffffff
   ul
     padding: 0
     margin: 0
@@ -40,17 +32,10 @@
     &-title
       color: #ffffff
       line-height: unset
-    ul
-      padding: 0
-      margin: 0
-      list-style: none
-      li
-        margin-bottom: 10px
-        a
-          color: #ffffff
-          text-decoration: none
-          &:hover
-            text-decoration: underline
+    a
+      text-decoration: none
+      &:hover
+        text-decoration: underline
   &-contacts
     display: flex
     flex-direction: column
@@ -94,41 +79,47 @@
 
 @media screen and (max-width: 1200px)
   .footer
-    &-menu
-      flex-basis: 30%
-      &-bar
-        flex-wrap: wrap
-        justify-content: center
     &-text
-      max-width: 480px
+      margin-top: 10px
+      &-wrapper
+        justify-content: center
+        padding-top: 15px
+        flex-wrap: wrap
+@media screen and (max-width: 1024px)
+  .footer
     &-info
-      .logo
-        margin-right: 15px
+      flex-wrap: wrap
+    &-nav
+      &-wrapper
+        margin-bottom: 30px
 @media screen and (max-width: 800px)
   .footer
-    &-menu
-      flex-basis: 50%
-    &-social
-      margin-top: 30px
     &-info
-      flex-wrap: wrap
-      justify-content: center
-    &-text
-      max-width: 100%
-      &-wrapper
-        flex-direction: column
-        a
-          padding-bottom: 15px
-@media screen and (max-width: 600px)
+      justify-content: space-between
+@media screen and (max-width: 768px)
   .footer
     &-nav
-      flex-wrap: wrap
-      justify-content: center
       &-wrapper
-        margin-right: unset
+        flex-basis: 30%
+        text-align: right
+        .menu-item
+          margin-right: 0
+    &-text
+      &-wrapper
+        justify-content: unset
+@media screen and (max-width: 500px)
+  .footer
     &-info
-      ul
-        li
-          padding-bottom: 15px
-    &-social
-      margin-top: 10px
+      flex-direction: column
+    &-logo
+      padding-bottom: 20px
+    &-nav
+      &-wrapper
+        flex-basis: unset
+        text-align: unset
+        margin-bottom: 5px
+    &-menu
+      margin-bottom: 20px
+    &-text
+      &-wrapper
+        margin-top: 20px
