--- a/assets/sass/_header.sass
+++ b/assets/sass/_header.sass
@@ -79,7 +79,7 @@ body
     content: ''
     top: 0
     left: -1500px
-    width: 136vw
+    width: 500%
     height: 230px
     background: #FFFFFF
   li
@@ -90,15 +90,10 @@ body
     &-wrapper
       flex-wrap: wrap
     &-nav
-      order: 5
       padding-top: 20px
     &-menu
+      margin-top: 0
       flex-wrap: wrap
-  .menu
-    &-item
-      a
-        margin-left: 0
-        margin-right: 30px
 @media screen and (max-width: 768px)
   .header
     &-wrapper
@@ -111,27 +106,45 @@ body
       width: calc(40% + 40px)
       background-color: #ffffff
       padding: 30px
-      z-index: 99
+      z-index: 10
       border-radius: 10px
       box-shadow: 1px 1px 10px rgba(#262D33, 0.2)
     &-menu
       flex-direction: column
       align-items: flex-start
       a
-        color: #000
+        color: #323232
       &-toggle
         display: flex
-        width: 30px
-        height: 20px
+        min-width: 30px
+        height: 30px
         align-items: center
         justify-content: space-between
         flex-direction: column
         margin-left: 10px
         span
           width: 100%
-          height: 1px
-          background-color: #ffffff
+          height: 3px
+          background-color: #323232
     .menu
       &-item
         &:not(:last-child)
-          margin-bottom: 15px
+          padding-bottom: 10px
+  .sub-menu
+    width: 300px
+
+@media screen and (max-width: 768px)
+  .header-wrapper
+    flex-wrap: unset
+@media screen and (max-width: 620px)
+  .sub-menu
+    width: 250%
+    padding-left: 15px
+    border-radius: 10px
+    box-shadow: 1px 1px 10px rgba(#262D33, 0.2)
+@media screen and (max-width: 480px)
+  .sub-menu
+    width: 220%
+@media screen and (max-width: 420px)
+  .sub-menu
+    width: 185%
