--- a/assets/sass/_hero.sass
+++ b/assets/sass/_hero.sass
@@ -73,3 +73,28 @@
       &::after
         content: ''
         width: 42px
+
+@media screen and (max-width: 1230px)
+  .hero
+    &-slider
+      overflow: hidden
+@media screen and (max-width: 768px)
+  .hero
+    .article
+      &-permalink
+        width: 500px
+      &-title
+        font-size: 30px
+@media screen and (max-width: 600px)
+  .hero
+    .article
+      &-permalink
+        width: auto
+        padding-right: 20px
+@media screen and (max-width: 380px)
+  .hero
+    .article
+      &-btn
+        width: 220px
+      &-title
+        font-size: 26px
