--- a/assets/sass/_news.sass
+++ b/assets/sass/_news.sass
@@ -38,3 +38,20 @@
       color: #666666
       p
         margin: 20px 0
+
+@media screen and (max-width: 1200px)
+  .news
+    &-posts
+      .item-1
+        width: 100%
+@media screen and (max-width: 768px)
+  .news
+    &-posts
+      grid-template-columns: 1fr
+      grid-template-rows: 1fr
+      .item-1
+        grid-area: 1 / 1 / 2 / 2
+      .item-2
+        grid-area: 2 / 1 / 3 / 2
+      .item-3
+        grid-area: 3 / 1 / 4 / 2
