--- a/assets/sass/_sidebar.sass
+++ b/assets/sass/_sidebar.sass
@@ -27,6 +27,7 @@
     a
       display: block
       padding-bottom: 5px
+      cursor: pointer
       &:nth-child(2)
         margin-top: -20px
   &-social
@@ -76,3 +77,14 @@
         color: #A2A2A2
         margin-top: 20px
         margin-bottom: 10px
+
+@media screen and (max-width: 768px)
+  .widget
+    &-posts
+      &-wrapper
+        grid-template-columns: repeat(2, 1fr)
+@media screen and (max-width: 560px)
+  .widget
+    &-posts
+      &-wrapper
+        grid-template-columns: 1fr
